@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-* Fixed: NPO Live streams
+* Fixed: renamed npo.nl -> npostart.nl (Fixes #968)
 
 [I]Previous Changes[/I]
+* Fixed: NPO Live streams
 * Added: times to NOS Journaal (Fixes #933)
 * Fixed: NOS.nl only showed old videos (Fixes #912)
 * Fixed: NTR School TV had some weird <null> items (Fixes #913)
